--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "umi-test",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "test:coverage": "umi-test --coverage"
   },
   "gitHooks": {
@@ -28,12 +29,19 @@
     "umi": "^3.5.21"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/react": "^12.1.4",
     "@types/lodash.throttle": "^4.1.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.24",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.21",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
@@ -41,5 +49,11 @@
   },
   "resolutions": {
     "styled-components": "^5"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   }
 }
