--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "antd": "^4.19.1",
+    "axios": "^0.26.1",
     "lodash.throttle": "^4.1.1",
     "react": "17.x",
     "react-dom": "17.x",
