--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "umi-test --coverage"
+    "test:coverage": "jest --coverage"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@types/lodash.throttle": "^4.1.6",
     "@types/react": "^17.0.0",
@@ -40,9 +41,9 @@
     "@types/styled-components": "^5.1.24",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.21",
+    "axios-mock-adapter": "^1.20.0",
     "babel-jest": "^27.5.1",
     "jest": "^27.5.1",
-    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
